--- a/cachehit/cachemissv2.htm
+++ b/cachehit/cachemissv2.htm
@@ -15,13 +15,13 @@ function bench(name, func, prof) {
 	if ( prof ) { console.profileEnd(name);}
 	console.log(name, (new Date())-timer);
 }
-obj1 = {0:"1",1:"1",2:"1",3:"1",4:"1",5:"1"},  l = 100000, arr1a = new Array(l), arr1b = new Array(l), arr1c = new Array(l), i = 0;
+obj1 = {0:1,1:1,2:1,3:1,4:1,5:1},  l = 300000, arr1a = new Array(l), arr1b = new Array(l), arr1c = new Array(l), i = 0;
 for ( i = 0; i < l; i++ ) {
 	arr1a[i] = JSON.parse(JSON.stringify(obj1));
 	arr1b[i] = JSON.parse(JSON.stringify(obj1));
 	arr1c[i] = JSON.parse(JSON.stringify(obj1));
 }
-obj2 = {0:"1",1:"1",2:"1",3:"1",4:"1",5:"1"}, arr2 = new Array(l*6);
+obj2 = {0:1,1:1,2:1,3:1,4:1,5:1}, arr2 = new Array(l*6);
 for ( i = 0; i < l*6; i+=6 ) {
 	arr2[i] = obj2[0];
 	arr2[i+1] =obj2[1];
@@ -45,57 +45,71 @@ for ( i = 0; i < l; i++ ) {
 bench('cache-miss-obj', function(){
 
 	for ( i = 0; i < l; i++ ) {
-		arr1a[i][0] = "1";
-		arr1a[i][1] = "2";
-		arr1a[i][2] = "1";
-		arr1a[i][3] = "2";
-		arr1a[i][4] = "1";
-		arr1a[i][5] = "2";
+		arr1a[i][0] = 1;
+		arr1a[i][1] = 2;
+		arr1a[i][2] = 1;
+		arr1a[i][3] = 2;
+		arr1a[i][4] = 1;
+		arr1a[i][5] = 2;
 	}
 });
 bench('cache-miss-local-obj', function(){
 
 	for ( i = 0; i < l; i++ ) {
 		var obj = arr1b[i];
-		obj[0] = "1";
-		obj[1] = "2";
-		obj[2] = "1";
-		obj[3] = "2";
-		obj[4] = "1";
-		obj[5] = "2";
+		obj[0] = 1;
+		obj[1] = 2;
+		obj[2] = 1;
+		obj[3] = 2;
+		obj[4] = 1;
+		obj[5] = 2;
 	}
 });
 bench('cache-miss-local-unrolled-obj', function(){
 	var obj;
 	for ( i = 0; i < l; i++ ) {
 		obj = arr1c[i];
-		obj[0] = "1";
-		obj[1] = "2";
-		obj[2] = "1";
-		obj[3] = "2";
-		obj[4] = "1";
-		obj[5] = "2";
+		obj[0] = 1;
+		obj[1] = 2;
+		obj[2] = 1;
+		obj[3] = 2;
+		obj[4] = 1;
+		obj[5] = 2;
 	}
 });
 bench('cache-miss-array', function(){
 	for ( i = 0; i < l*6; i+=6 ) {
-		arr2[i+0] = "1";
-		arr2[i+1] = "2";
-		arr2[i+2] = "1";
-		arr2[i+3] = "2";
-		arr2[i+4] = "1";
-		arr2[i+5] = "2";
+		arr2[i+0] = 1;
+		arr2[i+1] = 2;
+		arr2[i+2] = 1;
+		arr2[i+3] = 2;
+		arr2[i+4] = 1;
+		arr2[i+5] = 2;
 	}
 });
 
 bench('cache-miss-fastobj', function(){
 	for ( i = 0; i < l; i++ ) {
-		Type.get(i).set0("1");
-		Type.get(i).set1("2");
-		Type.get(i).set2("1");
-		Type.get(i).set3("2");
-		Type.get(i).set4("1");
-		Type.get(i).set5("2");
+		var t1 = Type.get(i);
+		t1.set0(1);
+		t1.set1(2);
+		t1.set2(1);
+		t1.set3(2);
+		t1.set4(1);
+		t1.set5(2);
+	}
+});
+
+bench('cache-miss-fastobj-iterator', function(){
+	var t1 = Type.get(0);
+	for ( i = 0; i < l; i++ ) {
+		t1.set0(1);
+		t1.set1(2);
+		t1.set2(1);
+		t1.set3(2);
+		t1.set4(1);
+		t1.set5(2);
+		t1 = t1.next();
 	}
 });
 </script>
