--- a/cachehit/cachehitobj.htm
+++ b/cachehit/cachehitobj.htm
@@ -5,8 +5,9 @@
 <body>
 <script src="./cachehitobj.js"></script>
 <script>
-var l = 100000;
+var l = 10000;
 var obj2 = {0:1,1:1,2:1,3:1,4:1,5:1}
+// console.profile("create");
 var Type = new FastObj("0 1 2 3 4 5".split(' '), l);
 for ( i = 0; i < l; i++ ) {
 	var t1 = Type.new();
@@ -17,6 +18,7 @@ for ( i = 0; i < l; i++ ) {
 	t1.set4(obj2[4]);
 	t1.set5(obj2[5]);
 }
+// console.profileEnd("create");
 
 console.profile("profile");
 (function(){
@@ -33,7 +35,7 @@ for ( i = 0; i < l; i++ ) {
 }
 })();
 console.profileEnd("profile");
-
+// console.log(Type.get(0).get2());
 </script>
 </body>
 </html>
